--- a/index.html
+++ b/index.html
@@ -37,230 +37,12 @@
 	</div>
 
 	<!-- Slideshow container -->
-	<div class="columns" style="display:flex; justify-content:center; position: relative;">
-		<div class="column is-one-fifth"><a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a></div>
-		<!-- Full-width images with number and caption text -->
-		<div class="column is-three-fifth mySlides1 fade">
-			<div class=" numbertext">1 / 3</div>
-			<div class="columns">
-				<div class="column" style="display:flex; justify-content:center">
-					<img src="./assets/magical_storybook_1.jpeg" style="width:auto; max-height: 500px; ">
-				</div>
-				<div class="column" style="display:flex; justify-content:center">
-					<img src="./assets/magical_storybook_2.jpeg" style="width:auto;  max-height: 500px; ">
-				</div>
-			</div>
-			<div class="columns text" style="display: flex; justify-content: center; padding: 3%;">
-				<div class="column is-1"></div>
-				<div class="columns" style="background-color: #2A071B; ">
-					<div class="column caption-text"
-						style="font-size: 64px; min-width: 100px; display: flex; align-items:end; color: whitesmoke;">
-						Woah!</div>
-					<div class="column caption-text-2"
-						style="font-size: 24px;color: whitesmoke; min-width: 250px; display: flex; justify-content: center; align-items:end; padding-bottom: 10%;">
-						Are we IN the book?
-					</div>
-				</div>
-				<div class="column is-1"></div>
-			</div>
-		</div>
 
-		<div class="column is-three-fifth mySlides1 fade ">
-			<div class=" numbertext">2 / 3</div>
-			<div class="columns">
-				<div class="column " style="display:flex; justify-content:center">
-					<img src="./assets/pet_dragon.jpeg" style="width:auto;  max-height: 500px; ">
-				</div>
-
-			</div>
-			<div class="columns text" style="display: flex; justify-content: center; padding: 3%;">
-				<div class="column is-1"></div>
-				<div class="columns" style="background-color: #B49374; ">
-					<div class="column caption-text"
-						style="font-size: 64px; min-width: 100px; display: flex; align-items:end;">MoM!</div>
-					<div class="column caption-text-2"
-						style="font-size: 24px; min-width: 250px; display: flex; justify-content: center; align-items:end; padding-bottom: 10%;">
-						Can we keep
-						her?
-					</div>
-				</div>
-				<div class="column is-1"></div>
-			</div>
-		</div>
-
-		<div class="column is-three-fifth mySlides1 fade ">
-			<div class=" numbertext">3 / 3</div>
-			<div class="columns">
-				<div class="column" style="display:flex; justify-content:center">
-					<img src="./assets/treasure_cat.jpeg" style="width:auto;  max-height: 500px; ">
-				</div>
-
-			</div>
-			<div class="columns text" style="display: flex; justify-content: center; padding: 3%;">
-				<div class="column is-1"></div>
-				<div class="columns" style="background-color: #3C2611; ">
-					<div class="column caption-text"
-						style="font-size: 64px; min-width: 100px; display: flex; align-items:end; color: whitesmoke;">
-						Something!</div>
-					<div class="column caption-text-2"
-						style="font-size: 24px;color: whitesmoke; min-width: 250px; display: flex; justify-content: center; align-items:end; padding-bottom: 10%;">
-						and something else?
-					</div>
-				</div>
-				<div class="column is-1"></div>
-			</div>
-		</div>
-		<div class="column is-one-fifth"><a class="next" onclick="plusSlides(1, 1)">&#10095;</a></div>
+	
+	<div class="img-container">
+		<img class="img-tile" src="./assets/magical_storybook_1.jpeg">hi</img>
+		<img class="img-tile" src="./assets/magical_storybook_2.jpeg">
 	</div>
-	<br>
-	<!-- Next and previous buttons -->
-
-
-	<!-- The dots/circles -->
-	<div style="text-align:center">
-		<span class="dot1" onclick="currentSlide(1,1)"></span>
-		<span class="dot1" onclick="currentSlide(2, 1)"></span>
-		<span class="dot1" onclick="currentSlide(3, 1)"></span>
-	</div>
-
-	<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-
-	<div class="line-text fun-font">
-		<hr>
-		<span>Story Books</span>
-		<hr>
-	</div>
-
-	<!-- Slideshow container -->
-	<div class="columns" style="display:flex; justify-content:center; position: relative;">
-		<div class="column is-one-fifth"><a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a></div>
-		<!-- Full-width images with number and caption text -->
-		<div class="column is-three-fifth mySlides2 fade">
-			<div class=" numbertext">1 / 3</div>
-			<div class="columns">
-				<div class="column" style="display:flex; justify-content:center">
-					<img src="./assets/rainy_1.jpeg" style="width:auto; max-height: 500px; ">
-				</div>
-				<div class="column" style="display:flex; justify-content:center">
-					<img src="./assets/rainy_2.jpeg" style="width:auto;  max-height: 500px; ">
-				</div>
-			</div>
-			<div class="columns text" style="display: flex; justify-content: center; padding: 3%;">
-				<div class="column is-1"></div>
-				<div class="columns" style="background-color: #DBE2F6; ">
-					<div class="column caption-text"
-						style="font-size: 64px; min-width: 100px; display: flex; align-items:end; color: black;">
-						Finally!</div>
-					<div class="column caption-text-2"
-						style="font-size: 24px;color: black; min-width: 250px; display: flex; justify-content: center; align-items:end; padding-bottom: 10%;">
-						It's raining!
-					</div>
-				</div>
-				<div class="column is-1"></div>
-			</div>
-		</div>
-
-		<div class="column is-three-fifth mySlides2 fade ">
-			<div class=" numbertext">2 / 3</div>
-			<div class="columns">
-				<div class="column " style="display:flex; justify-content:center">
-					<img src="./assets/rainy_3.jpeg" style="width:auto;  max-height: 500px; ">
-				</div>
-
-			</div>
-			<div class="columns text" style="display: flex; justify-content: center; padding: 3%;">
-				<div class="column is-1"></div>
-				<div class="columns" style="background-color: #DBE2F6; ">
-					<div class="column caption-text"
-						style="font-size: 64px; min-width: 100px; display: flex; align-items:end;">huh...</div>
-
-				</div>
-				<div class="column is-1"></div>
-			</div>
-		</div>
-
-
-		<div class="column is-one-fifth"><a class="next" onclick="plusSlides(1, 2)">&#10095;</a></div>
-	</div>
-	<br>
-	<!-- Next and previous buttons -->
-
-
-	<!-- The dots/circles -->
-	<div style="text-align:center">
-		<span class="dot2" onclick="currentSlide(1,2)"></span>
-		<span class="dot2" onclick="currentSlide(2, 2)"></span>
-		<span class="dot2" onclick="currentSlide(3, 2)"></span>
-	</div>
-
-	<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-
-	<div class="line-text fun-font">
-		<hr>
-		<span>Sherlock & Watson</span>
-		<hr>
-	</div>
-
-	<!-- Slideshow container -->
-	<div class="columns" style="display:flex; justify-content:center; position: relative;">
-		<div class="column is-one-fifth"><a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a></div>
-		<!-- Full-width images with number and caption text -->
-		<div class="column is-three-fifth mySlides3 fade">
-			<div class=" numbertext">1 / 3</div>
-			<div class="columns">
-				<div class="column" style="display:flex; justify-content:center">
-					<img src="./assets/sherlock_1.jpeg" style="width:auto; max-height: 750px; ">
-				</div>
-
-			</div>
-			<div class="columns text" style="display: flex; justify-content: center; padding: 3%;">
-				<div class="column is-1"></div>
-				<div class="columns" style="background-color: #DBE2F6; ">
-					<div class="column caption-text"
-						style="font-size: 64px; min-width: 100px; display: flex; align-items:end; color: black;">
-						Finally!</div>
-					<div class="column caption-text-2"
-						style="font-size: 24px;color: black; min-width: 250px; display: flex; justify-content: center; align-items:end; padding-bottom: 10%;">
-						It's raining!
-					</div>
-				</div>
-				<div class="column is-1"></div>
-			</div>
-		</div>
-
-		<div class="column is-three-fifth mySlides3 fade ">
-			<div class=" numbertext">2 / 3</div>
-			<div class="columns">
-
-				<div class="column" style="display:flex; justify-content:center">
-					<img src="./assets/sherlock_2.jpeg" style="width:auto;  max-height: 750px; ">
-				</div>
-			</div>
-			<div class="columns text" style="display: flex; justify-content: center; padding: 3%;">
-				<div class="column is-1"></div>
-				<div class="columns" style="background-color: #DBE2F6; ">
-					<div class="column caption-text"
-						style="font-size: 64px; min-width: 100px; display: flex; align-items:end;">huh...</div>
-
-				</div>
-				<div class="column is-1"></div>
-			</div>
-		</div>
-
-
-		<div class="column is-one-fifth"><a class="next" onclick="plusSlides(1, 3)">&#10095;</a></div>
-	</div>
-	<br>
-	<!-- Next and previous buttons -->
-
-
-	<!-- The dots/circles -->
-	<div style="text-align:center">
-		<span class="dot3" onclick="currentSlide(1, 3)"></span>
-		<span class="dot3" onclick="currentSlide(2, 3)"></span>
-		<span class="dot3" onclick="currentSlide(3, 3)"></span>
-	</div>
-
 
 	<footer>
 		<p>&copy; 2024 My Portfolio. All rights reserved.</p>
