--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 
-<body style="max-width: 85%; margin: 0 auto;">
+<body style="margin: 0 auto;max-width: 75%;">
 
 	<div style="background-color: #f2f2f2; text-align: center; padding: 30px 30px 0px 30px;">
 		<h2 class="name-heading" style="color: #000000;  padding-bottom: 0%; margin-bottom: 0%;">Katrina
@@ -29,22 +29,144 @@
 		<div class="navbutton">Character Design</div>
 		<div class="navbutton">About Me</div>
 	</div>
-	<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-	<div class="line-text fun-font">
-		<hr>
-		<span>Immersive, Magical, Detailed</span>
-		<hr>
+
+
+	<div class="yoo" style="margin:0 auto; ">
+		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+
+		<div class="line-text fun-font">
+			<hr>
+			<span>Immersive, Magical, Detailed</span>
+			<hr>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center">
+			<div>
+				<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
+			</div>
+			<div>
+				<img src="./assets/magical_storybook_2.jpeg" class="right-tiled">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/treasure_cat.jpeg" class="tile">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/pet_dragon.jpeg" class="tile">
+			</div>
+		</div>
+		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+
+		<div class="line-text fun-font">
+			<hr>
+			<span>Story Book Illustrations</span>
+			<hr>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center">
+			<div>
+				<img class="left-tiled" src="./assets/rainy_1.jpeg" class="left-tiled">
+			</div>
+			<div>
+				<img src="./assets/rainy_2.jpeg" class="right-tiled">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/rainy_3.jpeg" class="tile">
+			</div>
+		</div>
+		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+
+		<div class="line-text fun-font">
+			<hr>
+			<span>Sherlock & Watson</span>
+			<hr>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center">
+			<div>
+				<img class="left-tiled" src="./assets/sherlock_title.jpeg">
+			</div>
+			<div>
+				<img src="./assets/sherlock_hound.jpg" class="right-tiled">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/rainy_3.jpeg" class="tile">
+			</div>
+		</div>
+
+		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+		<div class="line-text fun-font">
+			<hr>
+			<span>The Characters of Cony Forest</span>
+			<hr>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center">
+			<div>
+				<img class="left-tiled" src="./assets/cony_thumbnails.jpeg">
+			</div>
+			<div>
+				<img src="./assets/cony_thumbnails.jpeg" class="right-tiled">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/bulbina.jpeg" class="tile">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center">
+			<div>
+				<img class="left-tiled" src="./assets/rocky.jpeg">
+			</div>
+			<div>
+				<img src="./assets/picu.jpeg" class="right-tiled">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/twotty.jpeg" class="tile">
+			</div>
+		</div>
+
+		<div class="image-container" style="display:flex; justify-content:center">
+			<div>
+				<img class="left-tiled" src="./assets/green.jpeg">
+			</div>
+			<div>
+				<img src="./assets/grubby.jpeg" class="right-tiled">
+			</div>
+		</div>
+
+		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+		<div class="line-text fun-font">
+			<hr>
+		</div>
+		<div class="columns" style="display:flex; justify-content:center; ">
+			<div class="column is-one-half" style="display: flex; justify-content: center;">
+				<img src="./assets/face.png">
+			</div>
+			<div class="column is-one-half" style="display: flex; justify-content: center;">
+				<div>
+					<div class="line-text fun-font" style="padding-bottom: 5%; padding-top:5%">Hi, I'm Katrina!</div>
+					<div style="color:#000000">
+						I'm a freelance illustrator and concept artist based in the Philippines. I
+						specialize in creating whimsical and magical worlds that are inspired by my love for fantasy and
+						adventure. I have a passion for storytelling and character design, and I love bringing
+						characters to
+						life through my art. I'm always looking for new opportunities to collaborate with other
+						creatives and
+						bring their visions to life. If you're interested in working with me, feel free to get in touch!
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-
-	<!-- Slideshow container -->
-
-	
-	<div class="img-container">
-		<img class="img-tile" src="./assets/magical_storybook_1.jpeg">hi</img>
-		<img class="img-tile" src="./assets/magical_storybook_2.jpeg">
-	</div>
-
 	<footer>
+
 		<p>&copy; 2024 My Portfolio. All rights reserved.</p>
 	</footer>
 
