--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 	<div style="display:flex; justify-content: center; align-items: center;">
 		<div onclick="scrollToTarget('immersive-worlds')" class="navbutton">Immersive Worlds</div>
-		<div class="navbutton">Story Books</div>
-		<div class="navbutton">Sherlock & Watson</div>
-		<div class="navbutton">Characters of Cony Forest</div>
-		<div class="navbutton">About Me</div>
+		<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>
+		<div onclick="scrollToTarget('sherlock')" class="navbutton">Sherlock & Watson</div>
+		<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>
+		<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
 	</div>
 
 
@@ -63,7 +63,7 @@
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-		<div class="line-text fun-font">
+		<div id="story-books" class="line-text fun-font">
 			<hr>
 			<span>Story Book Illustrations</span>
 			<hr>
@@ -83,7 +83,7 @@
 		</div>
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-		<div class="line-text fun-font">
+		<div id="sherlock" class="line-text fun-font">
 			<hr>
 			<span>Sherlock & Watson</span>
 			<hr>
@@ -103,7 +103,7 @@
 		</div>
 
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-		<div class="line-text fun-font">
+		<div id="cony" class="line-text fun-font">
 			<hr>
 			<span>The Characters of Cony Forest</span>
 			<hr>
@@ -145,7 +145,7 @@
 		</div>
 
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-		<div class="line-text fun-font">
+		<div id="me" class="line-text fun-font">
 			<hr>
 		</div>
 		<div class="columns image-container" style="display:flex; justify-content:center; ">
