--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <body style="margin: 0 auto;max-width: 75%;">
 
-	<div style="background-color: #f2f2f2; text-align: center; padding: 30px 30px 0px 30px;">
-		<h2 class="name-heading" style="color: #000000;  padding-bottom: 0%; margin-bottom: 0%;">Katrina
+	<div style="background-color: #f2f2f2; text-align: center; padding: 30px 30px 0px 30px; ">
+		<h2 class="name-heading" style="color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%;">Katrina
 			Abraham</h2>
 	</div>
 
@@ -36,10 +36,10 @@
 
 	<div class="yoo" style="margin:0 auto; ">
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-
-		<div id="immersive-worlds" class="line-text fun-font">
+		<div>
+		<div id="immersive-worlds" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
 			<hr>
-			<span>Immersive, Magical, Detailed</span>
+			<span>Immersive, Magical & Detailed</span>
 			<hr>
 		</div>
 		<div class="image-container" style="display:flex; justify-content:center">
@@ -60,10 +60,11 @@
 				<img src="./assets/pet_dragon.jpeg" class="tile">
 			</div>
 		</div>
+	</div>
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-		<div id="story-books" class="line-text fun-font">
+		<div id="story-books" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
 			<hr>
 			<span>Story Book Illustrations</span>
 			<hr>
@@ -83,7 +84,7 @@
 		</div>
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-		<div id="sherlock" class="line-text fun-font">
+		<div id="sherlock" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
 			<hr>
 			<span>Sherlock & Watson</span>
 			<hr>
@@ -103,19 +104,12 @@
 		</div>
 
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-		<div id="cony" class="line-text fun-font">
+		<div id="cony" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
 			<hr>
 			<span>The Characters of Cony Forest</span>
 			<hr>
 		</div>
-		<div class="image-container" style="display:flex; justify-content:center">
-			<div>
-				<img class="left-tiled" src="./assets/cony_thumbnails.jpeg">
-			</div>
-			<div>
-				<img src="./assets/cony_thumbnails.jpeg" class="right-tiled">
-			</div>
-		</div>
+
 		<div class="image-container" style="display:flex; justify-content:center;">
 			<div>
 				<img src="./assets/bulbina.jpeg" class="tile">
