--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 			Abraham</h2>
 	</div>
 
-	<div style="display:flex; justify-content: center; align-items: center;">
+	<div class="navbuttons" style=" justify-content: center; align-items: center;">
 		<div onclick="scrollToTarget('immersive-worlds')" class="navbutton">Immersive Worlds</div>
-		<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>
 		<div onclick="scrollToTarget('sherlock')" class="navbutton">Sherlock & Watson</div>
+		<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>
 		<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>
 		<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
 	</div>
@@ -60,8 +60,36 @@
 				<img src="./assets/pet_dragon.jpeg" class="tile">
 			</div>
 		</div>
+		<div class="image-container" style="display:flex; justify-content:center">
+			<div>
+				<img class="left-tiled" src="./assets/octopus_queen.png" class="left-tiled">
+			</div>
+			<div>
+				<img src="./assets/mermaid_dragon.png" class="right-tiled">
+			</div>
+		</div>
 	</div>
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+
+			<div id="sherlock" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
+				<hr>
+				<span>Sherlock & Watson</span>
+				<hr>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/sherlock_scarlet.png">
+				</div>
+				<div>
+					<img src="./assets/sherlock_hound.png" class="right-tiled">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/sherlock_bw.png" class="tile">
+				</div>
+			</div>
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
 		<div id="story-books" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
@@ -82,26 +110,27 @@
 				<img src="./assets/rainy_3.jpeg" class="tile">
 			</div>
 		</div>
-		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-
-		<div id="sherlock" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
-			<hr>
-			<span>Sherlock & Watson</span>
-			<hr>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center">
+		<div class="image-container" style="display:flex; justify-content:center;">
 			<div>
-				<img class="left-tiled" src="./assets/sherlock_title.jpeg">
-			</div>
-			<div>
-				<img src="./assets/sherlock_hound.jpg" class="right-tiled">
+				<img src="./assets/jesus_1.png" class="tile">
 			</div>
 		</div>
 		<div class="image-container" style="display:flex; justify-content:center;">
 			<div>
-				<img src="./assets/rainy_3.jpeg" class="tile">
+				<img src="./assets/jesus_2.png" class="tile">
 			</div>
 		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/jesus_3.png" class="tile">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/jesus_4.png" class="tile">
+			</div>
+		</div>
+	
 
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 		<div id="cony" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
@@ -117,10 +146,10 @@
 		</div>
 		<div class="image-container" style="display:flex; justify-content:center">
 			<div>
-				<img class="left-tiled" src="./assets/rocky.jpeg">
+				<img class="left-tiled" src="./assets/Rocky Model Sheet.png">
 			</div>
 			<div>
-				<img src="./assets/picu.jpeg" class="right-tiled">
+				<img src="./assets/Picu Model Sheet.png" class="right-tiled">
 			</div>
 		</div>
 		<div class="image-container" style="display:flex; justify-content:center;">
@@ -131,10 +160,15 @@
 
 		<div class="image-container" style="display:flex; justify-content:center">
 			<div>
-				<img class="left-tiled" src="./assets/green.jpeg">
+				<img class="left-tiled" src="./assets/green.png">
 			</div>
 			<div>
-				<img src="./assets/grubby.jpeg" class="right-tiled">
+				<img src="./assets/grubby.png" class="right-tiled">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/Frogs.png" class="tile">
 			</div>
 		</div>
 
