--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Just Me Again Down Here' rel='stylesheet'>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
 		rel="stylesheet">
@@ -23,7 +24,7 @@
 	<div style="background-color: #f2f2f2; text-align: center; padding: 30px 30px 0px 30px; ">
 		<h2 class="name-heading" style="color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%;">Katrina
 			Abraham</h2>
-	</div>
+
 
 	<div class="navbuttons" style=" justify-content: center; align-items: center;">
 		<div onclick="scrollToTarget('immersive-worlds')" class="navbutton">Immersive Worlds</div>
@@ -173,7 +174,9 @@
 		</div>
 
 		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-		<div id="me" class="line-text fun-font">
+		<div id="me" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
+			<hr>
+			<span>About Me</span>
 			<hr>
 		</div>
 		<div class="columns image-container" style="display:flex; justify-content:center; ">
@@ -184,15 +187,24 @@
 				<div>
 					<div class="line-text fun-font" style="padding-bottom: 5%; padding-top:5%">Hi, I'm Katrina!</div>
 					<div style="color:#000000">
-						I'm a freelance illustrator and concept artist based in the Philippines. I
-						specialize in creating whimsical and magical worlds that are inspired by my love for fantasy and
-						adventure. I have a passion for storytelling and character design, and I love bringing
-						characters to
-						life through my art. I'm always looking for new opportunities to collaborate with other
-						creatives and
-						bring their visions to life. If you're interested in working with me, feel free to get in touch!
+						I am a Manitoba-based illustrator with a passion for creativity and visual story-telling. I am particularly drawn to creating illustrations that spark imagination and those that transport viewers to adventurous and fantastical worlds. Although my illustration journey began as a hobby, it has become something I'm excited to pursue further. Thank you for taking the time to visit my portfolio. I hope you enjoy exploring my work as much as I enjoyed creating it.
 					</div>
+					<p style="color:#724848">Contact me at: katrina.sm.abraham@gmail.com</p>
+					<div style="display: flex; justify-content: center; gap: 20px;">
+						<a href="https://www.instagram.com/katrina.abraham.art/" target="_blank">
+						  <img src="assets/icons8-instagram-100.png" alt="Instagram" style="width: 30px; height: 30px;">
+						</a>
+						<a href="katrina.sm.abraham@gmail.com">
+						  <img src="assets/icons8-email-100.png" alt="Email" style="width: 30px; height: 30px;">
+						</a>
+					
+			</div>
 				</div>
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
+				<img src="./assets/cat.gif" class="tile">
 			</div>
 		</div>
 	</div>
