--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 		</div>
 		<div class="image-container" style="display:flex; justify-content:center;">
 			<div>
+				<img src="./assets/kiddo.jpeg" class="tile">
+			</div>
+		</div>
+		<div class="image-container" style="display:flex; justify-content:center;">
+			<div>
 				<img src="./assets/treasure_cat.jpeg" class="tile">
 			</div>
 		</div>
@@ -187,7 +192,7 @@
 				<div>
 					<div class="line-text fun-font" style="padding-bottom: 5%; padding-top:5%">Hi, I'm Katrina!</div>
 					<div style="color:#000000">
-						I am a Manitoba-based illustrator with a passion for creativity and visual story-telling. I am particularly drawn to creating illustrations that spark imagination and those that transport viewers to adventurous and fantastical worlds. Although my illustration journey began as a hobby, it has become something I'm excited to pursue further. Thank you for taking the time to visit my portfolio. I hope you enjoy exploring my work as much as I enjoyed creating it.
+						I am a Canadian illustrator with a passion for creativity and visual story-telling. I am particularly drawn to creating illustrations that spark imagination and those that transport viewers to adventurous and fantastical worlds. Although my roots are in using pencils and pens, these days I mostly draw digitally. Thank you for taking the time to visit my portfolio. I hope you enjoy exploring my work as much as I enjoyed creating it.
 					</div>
 					<p style="color:#724848">Contact me at: katrina.sm.abraham@gmail.com</p>
 					<div style="display: flex; justify-content: center; gap: 20px;">
