remove paddings on mobile

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 
 
-<body style="margin: 0 auto;max-width: 75%;">
+<body class="body-style">
 
-	<div style="background-color: #f2f2f2; text-align: center; padding: 30px 30px 0px 30px; ">
+	<div class="main-container" style="">
 		<h2 class="name-heading" style="color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%;">Katrina
 			Abraham</h2>
 
