--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link href='https://fonts.googleapis.com/css?family=Just Me Again Down Here' rel='stylesheet'>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="/assets/k.ico">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
 		rel="stylesheet">
 
-		<script src="script.js"></script>
+	<script src="script.js"></script>
 </head>
 
 
@@ -26,56 +26,57 @@
 			Abraham</h2>
 
 
-	<div class="navbuttons" style=" justify-content: center; align-items: center;">
-		<div onclick="scrollToTarget('immersive-worlds')" class="navbutton">Immersive Worlds</div>
-		<div onclick="scrollToTarget('sherlock')" class="navbutton">Sherlock & Watson</div>
-		<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>
-		<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>
-		<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
-	</div>
+		<div class="navbuttons" style=" justify-content: center; align-items: center;">
+			<div onclick="scrollToTarget('immersive-worlds')" class="navbutton">Immersive Worlds</div>
+			<div onclick="scrollToTarget('sherlock')" class="navbutton">Sherlock & Watson</div>
+			<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>
+			<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>
+			<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
+		</div>
 
 
-	<div class="yoo" style="margin:0 auto; ">
-		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-		<div>
-		<div id="immersive-worlds" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
-			<hr>
-			<span>Immersive, Magical & Detailed</span>
-			<hr>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center">
+		<div class="yoo" style="margin:0 auto; ">
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 			<div>
-				<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
+				<div id="immersive-worlds" class="line-text fun-font"
+					style="position: sticky; top: 0; background-color: #f2f2f2;">
+					<hr>
+					<span>Immersive, Magical & Detailed</span>
+					<hr>
+				</div>
+				<div class="image-container" style="display:flex; justify-content:center">
+					<div>
+						<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
+					</div>
+					<div>
+						<img src="./assets/magical_storybook_2.jpeg" class="right-tiled">
+					</div>
+				</div>
+				<div class="image-container" style="display:flex; justify-content:center;">
+					<div>
+						<img src="./assets/kiddo.jpeg" class="tile">
+					</div>
+				</div>
+				<div class="image-container" style="display:flex; justify-content:center;">
+					<div>
+						<img src="./assets/treasure_cat.jpeg" class="tile">
+					</div>
+				</div>
+				<div class="image-container" style="display:flex; justify-content:center;">
+					<div>
+						<img src="./assets/pet_dragon.jpeg" class="tile">
+					</div>
+				</div>
+				<div class="image-container" style="display:flex; justify-content:center">
+					<div>
+						<img class="left-tiled" src="./assets/octopus_queen.png" class="left-tiled">
+					</div>
+					<div>
+						<img src="./assets/mermaid_dragon.png" class="right-tiled">
+					</div>
+				</div>
 			</div>
-			<div>
-				<img src="./assets/magical_storybook_2.jpeg" class="right-tiled">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/kiddo.jpeg" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/treasure_cat.jpeg" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/pet_dragon.jpeg" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center">
-			<div>
-				<img class="left-tiled" src="./assets/octopus_queen.png" class="left-tiled">
-			</div>
-			<div>
-				<img src="./assets/mermaid_dragon.png" class="right-tiled">
-			</div>
-		</div>
-	</div>
-		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
 			<div id="sherlock" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
@@ -96,127 +97,134 @@
 					<img src="./assets/sherlock_bw.png" class="tile">
 				</div>
 			</div>
-		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-		<div id="story-books" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
-			<hr>
-			<span>Story Book Illustrations</span>
-			<hr>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center">
-			<div>
-				<img class="left-tiled" src="./assets/rainy_1.jpeg" class="left-tiled">
+			<div id="story-books" class="line-text fun-font"
+				style="position: sticky; top: 0; background-color: #f2f2f2;">
+				<hr>
+				<span>Story Book Illustrations</span>
+				<hr>
 			</div>
-			<div>
-				<img src="./assets/rainy_2.jpeg" class="right-tiled">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/rainy_3.jpeg" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/jesus_1.png" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/jesus_2.png" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/jesus_3.png" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/jesus_4.png" class="tile">
-			</div>
-		</div>
-	
-
-		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-		<div id="cony" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
-			<hr>
-			<span>The Characters of Cony Forest</span>
-			<hr>
-		</div>
-
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/bulbina.jpeg" class="tile">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center">
-			<div>
-				<img class="left-tiled" src="./assets/Rocky Model Sheet.png">
-			</div>
-			<div>
-				<img src="./assets/Picu Model Sheet.png" class="right-tiled">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/twotty.jpeg" class="tile">
-			</div>
-		</div>
-
-		<div class="image-container" style="display:flex; justify-content:center">
-			<div>
-				<img class="left-tiled" src="./assets/green.png">
-			</div>
-			<div>
-				<img src="./assets/grubby.png" class="right-tiled">
-			</div>
-		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/Frogs.png" class="tile">
-			</div>
-		</div>
-
-		<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-		<div id="me" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
-			<hr>
-			<span>About Me</span>
-			<hr>
-		</div>
-		<div class="columns image-container" style="display:flex; justify-content:center; ">
-			<div class="column is-one-half" style="display: flex; justify-content: center; align-items: center;">
-				<img style="width: 80%; height: auto;" class="left-tiled" src="./assets/face.png">
-			</div>
-			<div class="column is-one-half" style="display: flex; justify-content: center;">
+			<div class="image-container" style="display:flex; justify-content:center">
 				<div>
-					<div class="line-text fun-font" style="padding-bottom: 5%; padding-top:5%">Hi, I'm Katrina!</div>
-					<div style="color:#000000">
-						I am a Canadian illustrator with a passion for creativity and visual story-telling. I am particularly drawn to creating illustrations that spark imagination and those that transport viewers to adventurous and fantastical worlds. Although my roots are in using pencils and pens, these days I mostly draw digitally. Thank you for taking the time to visit my portfolio. I hope you enjoy exploring my work as much as I enjoyed creating it.
-					</div>
-					<p style="color:#724848">Contact me at: katrina.sm.abraham@gmail.com</p>
-					<div style="display: flex; justify-content: center; gap: 20px;">
-						<a href="https://www.instagram.com/katrina.abraham.art/" target="_blank">
-						  <img src="assets/icons8-instagram-100.png" alt="Instagram" style="width: 30px; height: 30px;">
-						</a>
-						<a href="katrina.sm.abraham@gmail.com">
-						  <img src="assets/icons8-email-100.png" alt="Email" style="width: 30px; height: 30px;">
-						</a>
-					
+					<img class="left-tiled" src="./assets/rainy_1.jpeg" class="left-tiled">
+				</div>
+				<div>
+					<img src="./assets/rainy_2.jpeg" class="right-tiled">
+				</div>
 			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/rainy_3.jpeg" class="tile">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/jesus_1.png" class="tile">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/jesus_2.png" class="tile">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/jesus_3.png" class="tile">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/jesus_4.png" class="tile">
+				</div>
+			</div>
+
+
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div id="cony" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
+				<hr>
+				<span>The Characters of Cony Forest</span>
+				<hr>
+			</div>
+
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/bulbina.jpeg" class="tile">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/Rocky Model Sheet.png">
+				</div>
+				<div>
+					<img src="./assets/Picu Model Sheet.png" class="right-tiled">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/twotty.jpeg" class="tile">
+				</div>
+			</div>
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/green.png">
+				</div>
+				<div>
+					<img src="./assets/grubby.png" class="right-tiled">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/Frogs.png" class="tile">
+				</div>
+			</div>
+
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div id="me" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
+				<hr>
+				<span>About Me</span>
+				<hr>
+			</div>
+			<div class="columns image-container" style="display:flex; justify-content:center; ">
+				<div class="column is-one-half" style="display: flex; justify-content: center; align-items: center;">
+					<img style="width: 80%; height: auto;" class="left-tiled" src="./assets/face.png">
+				</div>
+				<div class="column is-one-half" style="display: flex; justify-content: center;">
+					<div>
+						<div class="line-text fun-font" style="padding-bottom: 5%; padding-top:5%">Hi, I'm Katrina!
+						</div>
+						<div style="color:#000000">
+							I am a Canadian illustrator with a passion for creativity and visual story-telling. I am
+							particularly drawn to creating illustrations that spark imagination and those that transport
+							viewers to adventurous and fantastical worlds. Although my roots are in using pencils and
+							pens, these days I mostly draw digitally. Thank you for taking the time to visit my
+							portfolio. I hope you enjoy exploring my work as much as I enjoyed creating it.
+						</div>
+						<p style="color:#724848">Contact me at: katrina.sm.abraham@gmail.com</p>
+						<div style="display: flex; justify-content: center; gap: 20px;">
+							<a href="https://www.instagram.com/katrina.abraham.art/" target="_blank">
+								<img src="assets/icons8-instagram-100.png" alt="Instagram"
+									style="width: 30px; height: 30px;">
+							</a>
+							<a href="katrina.sm.abraham@gmail.com">
+								<img src="assets/icons8-email-100.png" alt="Email" style="width: 30px; height: 30px;">
+							</a>
+
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/cat.gif" class="tile">
 				</div>
 			</div>
 		</div>
-		<div class="image-container" style="display:flex; justify-content:center;">
-			<div>
-				<img src="./assets/cat.gif" class="tile">
-			</div>
-		</div>
-	</div>
-	<footer>
+		<footer>
 
-		<p>&copy; 2024 My Portfolio. All rights reserved.</p>
-	</footer>
+			<p>&copy; 2024 My Portfolio. All rights reserved.</p>
+		</footer>
 
 
 </body>
